# ApiGatewayGTC

./: CMakeLists.txt  README.md  conanfile.txt
corba/: CMakeLists.txt  corba_runtime.cpp  corba_runtime.hpp  gcs_endpoints.h
corba/DII/: CMakeLists.txt  dii_invocation.cpp
corba/InterfaceRepository/: CMakeLists.txt  ifr_connect.cpp  ifr_connect.hpp
corba/NamingService/: CMakeLists.txt  ns_discover.cpp  ns_discover.hpp
diagrams/: InternalComponents.mmd  ThreadsDiagram.mmd
server/proto/: adapter.proto  config.proto  server.proto  stream.proto  unary.proto
src/: CMakeLists.txt
src/CorbaServant/: CMakeLists.txt  alarm_consumer.cpp  alarm_consumer.hpp  config_consumer.cpp  config_consumer.hpp  corba_servant.cpp  corba_servant.hpp  log_consumer.cpp  log_consumer.hpp  monitor_consumer.cpp  monitor_consumer.hpp
src/SubscriptionPropagator/: CMakeLists.txt  alarm_propagator.cpp  alarm_propagator.hpp  config_propagator.cpp  config_propagator.hpp  log_propagator.cpp  log_propagator.hpp  monitor_propagator.cpp  monitor_propagator.hpp  subscription_propagator.hpp
src/SubscriptionRegistry/: CMakeLists.txt  monitor_registry.hpp  subscription_registry.hpp
src/adapter/: CMakeLists.txt  alarm_adapter.cpp  alarm_adapter.hpp  any_adapter.cpp  any_adapter.hpp  config_adapter.cpp  config_adapter.hpp  log_adapter.cpp  log_adapter.hpp  monitor_adapter.cpp  monitor_adapter.hpp
src/corba/: CMakeLists.txt  corba_runtime.cpp  corba_runtime.hpp  corba_types.h  gcs_endpoints.cpp  gcs_endpoints.h
src/corba/Config/: CMakeLists.txt  config_service.cpp  config_service.hpp
src/corba/DII/: CMakeLists.txt  device_dispatcher.cpp  device_dispatcher.hpp  dii_invocation.cpp  dii_invocation.hpp
src/corba/InterfaceRepository/: CMakeLists.txt  ifr_connect.cpp  ifr_connect.hpp
src/corba/NamingService/: CMakeLists.txt  ns_discover.cpp  ns_discover.hpp
src/corba/test/: CMakeLists.txt  main.cpp
src/server/: CMakeLists.txt  config_server.cpp  config_server.hpp  gateway_service.cpp  gateway_service.hpp  main.cpp  stream_server.cpp  stream_server.hpp  unary_server.cpp  unary_server.hpp  unary_service.cpp
src/server/proto/: adapter.proto  config.proto  server.proto  stream.proto  unary.proto
test/: alarm_caller.py  alarm_test.py  client.py  config_caller.py  config_test.py  log_caller.py  log_test.py  monitor_test.py  unary_tests.py
